add top nav file, move views to new /views directory, add a spell list view

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -1,5 +1,17 @@
 {
     "dndspells": {
-        "TITLE": "DnD Spells"
+        "TITLE": "DnD Spells",
+        "TOP_NAV": {
+            "HEADER": "Top Nav"
+        },
+        "SIDEBOARD": {
+            "HEADER": "Sideboard"
+        },
+        "HOME": {
+            "HEADER": "Homepage"
+        },
+        "SPELL_LIST": {
+            "HEADER": "Spell List"
+        }
     }
 }
