updating css for page-frame and top-nav

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -2,7 +2,7 @@
     "dndspells": {
         "TITLE": "DnD Spells",
         "TOP_NAV": {
-            "HEADER": "Top Nav"
+            "HEADER": "DnD Spells"
         },
         "SIDEBOARD": {
             "HEADER": "Sideboard"
