adding a dashboard state and view, updating sidebar template and styles

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -5,7 +5,11 @@
             "HEADER": "DnD Spells"
         },
         "SIDEBOARD": {
-            "HEADER": "Sideboard"
+            "VIEW": {
+                "HEADER": "View",
+                "DASHBOARD": "Dashboard",
+                "SPELLS": "Spells"
+            }
         },
         "HOME": {
             "HEADER": "Homepage"
