updates to sideboard and top nav

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -8,7 +8,7 @@
             "VIEW": {
                 "HEADER": "View",
                 "DASHBOARD": "Dashboard",
-                "SPELLS": "Spells"
+                "SPELL_LIST": "Spell List"
             }
         },
         "HOME": {
