ui updates - auto-toggle sideboard when navigating to a new state, dynamic sideboard width based on viewport size

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -12,6 +12,7 @@
         "SIDEBOARD": {
             "VIEW": {
                 "HEADER": "View",
+                "HOME": "Home",
                 "DASHBOARD": "Dashboard",
                 "SPELL_LIST": "Spell List"
             }
