added disabled state to option dropdown component, implemented disabled state for create spellbook filters before a character class is selected

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -77,7 +77,8 @@
         },
         "CREATE_SPELLBOOK": {
             "HEADER": "Create Spellbook",
-            "CHAR_NAME_LABEL": "Character Name",
+            "CHAR_NAME_LABEL": "Character Name:",
+            "CHAR_NAME_PLACEHOLDER": "Character Name",
             "ERROR_CHAR_NAME_REQUIRED": "A name is required."
         }
     }
