--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -79,7 +79,8 @@
             "HEADER": "Create Spellbook",
             "CHAR_NAME_LABEL": "Character Name:",
             "CHAR_NAME_PLACEHOLDER": "Character Name",
-            "ERROR_CHAR_NAME_REQUIRED": "A name is required."
+            "ERROR_CHAR_NAME_REQUIRED": "A name is required.",
+            "SAVE_BUTTON": "Create Spellbook"
         }
     }
 }
