fixed two-way data binding for spell list selected spells

--- a/app/src/i18n/en.json
+++ b/app/src/i18n/en.json
@@ -81,6 +81,9 @@
             "CHAR_NAME_PLACEHOLDER": "Character Name",
             "ERROR_CHAR_NAME_REQUIRED": "A name is required.",
             "SAVE_BUTTON": "Create Spellbook"
+        },
+        "DASHBOARD": {
+            "HEADER": "Dashboard"
         }
     }
 }
